2004-02-05  Philippe Elie  <phil.el@wanadoo.fr>

	* libpp/callgraph_container.cpp: Big Thinko (tm), callee samples offset
	  are unordered

2004-02-04  Philippe Elie  <phil.el@wanadoo.fr>

	* libpp/callgraph_container.cpp:
	* libpp/format_output.cpp: arc_recorder::get_caller()/get_callee() name
	  was reversed (caught by Will Cohen)

2004-02-02  Philippe Elie  <phil.el@wanadoo.fr>

	* libpp/callgraph_container.cpp:
	* libpp/callgraph_container.h:
	* pp/opreport_options.h:
	* pp/opstack.cpp: implement --threshold

2004-02-02  Will Cohen  <wcohen@redhat.com>

	* libpp/callgraph_container.h:
	* libpp/format_output.h: missing std:: in header.

2004-02-01  Philippe Elie  <phil.el@wanadoo.fr>

	* libpp/callgraph_container.h:
	* libpp/callgraph_container.cpp: rewrite populate() and ehance
	  caller_callee_recorder to support multiple profile classes.
	* pp/opstack_options.cpp: accept multiple profile class

2004-02-01  Philippe Elie  <phil.el@wanadoo.fr>

	* libpp/callgraph_container.cpp: get correct source filenname liner
	* libpp/format_output.cpp: re-factorize a bit by moving anon
	  namespace from format_output:: to ::

2004-02-01  Philippe Elie  <phil.el@wanadoo.fr>

	* doc/oprofile.xml:
	* doc/opstack.1.in: document new options

	* libpp/callgraph_container.h:
	* libpp/callgraph_container.cpp: improve readability, add linenr
	  debug information recording partially, see TODO

	* libpp/format_output.h: s/formatter/opreport_formatter, define
	  cg_formatter
	* libpp/format_output.cpp: implement cg_formatter, factorize some code
	  in formatter base class

	* pp/opreport.cpp: s/formatter/opreport_formatter
	* pp/opstack_options.h:
	* pp/opstack_options.cpp: implement output selection/formatting options
	* pp/opstack.cpp: use cg_formatter for output.

2004-01-30  Philippe Elie  <phil.el@wanadoo.fr>

	commit not itended but tree is stable so add a ChangeLog ...
	* libpp/Makefile.am:
	* libpp/symbol.cpp: new file for output_hint()